--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-*.pdf
-*.bak    
+# VIM Swap Files
 *.swp
 *.swo
+## Core latex/pdflatex auxiliary files:
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+*.lb
+*.synctex.gz
+#misc
+*.bak
+*.dvi
+    
+    
